# llama-infer-learn

./: CMakeLists.txt  README.md
kuiper/include/base/: alloc.h  base.h  buffer.h
kuiper/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  base.cpp  buffer.cpp
kuiper/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
kuiper/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
kuiper/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rms_kernel.cpp  rms_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_add_layer.cpp  test_buffer.cpp  test_emb_layer.cpp  test_encode_layer.cpp  test_matmul_layer.cpp  test_mha_layer.cpp  test_rmsnorm_layer.cpp  test_rope_layer.cpp  test_swiglu_layer.cpp  test_tensor.cpp
